update uuid